# google-interview

./: .gitignore  CMakeLists.txt  README.md  ThingsIhaveLearnedToday.md  ack.tex  common.h  competitiveproblems.tex  data_structure.tex  dynamicprogramming.tex  front_cover.tex  hashtable.tex  main.tex  project_euler.tex  sorting.tex  structure.tex  tree.tex
book/: ack.tex  competitiveproblems.tex  data_structure.tex  dynamicprogramming.tex  front_cover.tex  glassdoor-google.tex  main.tex  sorting.tex  structure.tex  tree.tex
cracking_the_coding_interview/: amazon_reduce_to_1.cpp  ctci.md
cracking_the_coding_interview/exercices/: CMakeLists.txt
cracking_the_coding_interview/exercices/bit_manipulation/: CMakeLists.txt
cracking_the_coding_interview/exercices/bit_manipulation/include/: bit_manipulation.h
cracking_the_coding_interview/exercices/bit_manipulation/test/: bit_manipulation_test.cpp
cracking_the_coding_interview/exercices/linked_list/: CMakeLists.txt
cracking_the_coding_interview/exercices/linked_list/include/: list.h
cracking_the_coding_interview/exercices/linked_list/test/: linked_list_test.cpp
cracking_the_coding_interview/linked_list/: CMakeLists.txt
cracking_the_coding_interview/linked_list/include/: list.h
cracking_the_coding_interview/linked_list/test/: linked_list_test.cpp
docs/unique_ptr/: unique_ptr.h
hashcode2017/pizza/: out  pizza.cpp  small.in
haskell/: wikibook.hs
problems/: 277A.cpp  AIBOHP.cpp  DPAIRS.cpp  DPAIRS2.cpp  DPAIRS3.cpp  GMEDIAN.cpp  Googol_String.cpp  HMAPPY1.cpp  HMAPPY1.cpp.backup  code_chef_special_sum.cpp  codility_paysafe.cpp  common.h  cp.h  cuttingrod.cpp  generate_test.sh  segment_tree.h  spojRMQSQ.cpp  test.txt  test1.txt  test1.txtseq
problems/Store_Credit/: main.cpp
problems/chessboards/: main2.cpp  mainNOOPTIMAL.cpp
problems/codechef/: CAMC.cpp  DOOFST.cpp  DOOFST2.cpp  LSTBTF.cpp  LSTBTF1.cpp  MSV.cpp  NOCHANGE.cpp  PSHOT.cpp  SAKAN.cpp  SALB.cpp  TSHIRTS.cpp  test  test.txt
problems/codeforces/: .gdbinit  1000A.cpp  1000B.cpp  1005A.cpp  1005C.cpp  1006A.cpp  1006B.cpp  1006C.cpp  1006E.cpp  1015B.cpp  1015C.cpp  1015D.cpp  1015E.cpp  1016A.cpp  1029A.cpp  1029B.cpp  1030B.cpp  1030C.cpp  1036A.cpp  1038A.cpp  1038B.cpp  1038C.cpp  1038D.cpp  1041A.cpp  1047A.cpp  1047B.cpp  1051A.cpp  1051B.cpp  1051C.cpp  1059A.cpp  1059C.cpp  1060E.cpp  1066A.cpp  1066B.cpp  1066C.cpp  1066E.cpp  1106B.cpp  112A.cpp  118A.cpp  118AA.cpp  (+183 more)
problems/commonTests/: CMakeLists.txt  sorttest.cpp
problems/googlejam2017/: main.cpp
problems/hackerrank/: absolute_permutation.cpp  applearanges.cpp  birthday-cake-candles.cpp  camelcase.cpp  coin_change.cpp  countergame.cpp  equal.cpp  fair-cake-cutting.cpp  hackerank.cpp  icpcteam.cpp  max_gcd_sum.cpp  mini_max_sum.cpp  non-divisible-subset.cpp  (+8 more)
(+132 files in other folders)
